# DWSpectrumPlugin

./: .gitignore
APITool/: HttpDataPacket.cpp  HttpDataPacket.h  HttpDefine.h  base_type_define.h
metadata_sdk/: build_AIBox.bat  build_AIBox.sh  build_AIBox_arm32.sh  build_AIBox_arm64.sh  build_samples.bat  build_samples.sh  call_vcvars64.bat
metadata_sdk-build/AI_box_plugin/: .ninja_deps  .ninja_log  AI_box_plugin.exp  AI_box_plugin.lib  CMakeCache.txt  build.ninja  cmake_install.cmake
metadata_sdk-build/AI_box_plugin/nx_kit/: cmake_install.cmake
metadata_sdk/docs/html/: index.html  md_src_nx_sdk_analytics_manifests.html  samples_2stub__analytics__plugin_2src_2nx_2vms__server__plugins_2analytics_2stub_2diagnostic__events_2engine_8h_source.html  samples_2stub__analytics__plugin_2src_2nx_2vms__server__plugins_2analytics_2stub_2object__streamer_2engine_8h_source.html  samples_2stub__analytics__plugin_2src_2nx_2vms__server__plugins_2analytics_2stub_2object__streamer_2utils_8h_source.html  samples_2stub__analytics__plugin_2src_2nx_2vms__server__plugins_2analytics_2stub_2special__objects_2engine_8h_source.html  stream__parser_8h_source.html  stub__analytics__plugin_2src_2nx_2vms__server__plugins_2analytics_2stub_2custom__metadata_2device__agent_8h_source.html  stub__analytics__plugin_2src_2nx_2vms__server__plugins_2analytics_2stub_2object__streamer_2device__agent_8h_source.html
metadata_sdk/samples/AIBox_plugin/: CMakeLists.txt
metadata_sdk/samples/AIBox_plugin/src/nx/vms_server_plugins/analytics/AIBox/: main.cpp
metadata_sdk/samples/AIBox_plugin/src/nx/vms_server_plugins/analytics/AIBox/AIBox/: device_agent.cpp  device_agent.h  device_agent_manifest.h  engine.cpp  engine.h  engine_manifest.cpp  engine_manifest.h  ini.cpp  ini.h  object_attributes.cpp  object_attributes.h  plugin.cpp  plugin.h
metadata_sdk/samples/AIBox_plugin/src/nx/vms_server_plugins/analytics/AIBox/net/: net_utils.cpp  net_utils.h  subscriber.cpp  subscriber.h  tcp_client.cpp  tcp_client.h
metadata_sdk/samples/AIBox_plugin/src/nx/vms_server_plugins/analytics/AIBox/utils/: log.cpp  log.h  utils.cpp  utils.h
metadata_sdk/samples/AIBox_plugin/src/test_ipc/: main.cpp
metadata_sdk/samples/AIBox_plugin/static-resources/dw_mx9/: manifest_dw_mx9.json
metadata_sdk/samples/AI_box_plugin/: CMakeLists.txt
metadata_sdk/samples/AI_box_plugin/src/nx/vms_server_plugins/analytics/AIbox/: main.cpp
metadata_sdk/samples/AI_box_plugin/src/nx/vms_server_plugins/analytics/AIbox/AIbox/: device_agent.cpp  device_agent.h  device_agent_manifest.h  engine.cpp  engine.h  engine_manifest.cpp  engine_manifest.h  object_attributes.cpp  object_attributes.h  plugin.cpp  plugin.h  stub_analytics_plugin_AIbox_ini.cpp  stub_analytics_plugin_AIbox_ini.h
metadata_sdk/samples/AI_box_plugin/src/nx/vms_server_plugins/analytics/AIbox/net/: net_utils.cpp  net_utils.h  subscriber.cpp  subscriber.h  tcp_client.cpp  tcp_client.h
metadata_sdk/samples/AI_box_plugin/src/nx/vms_server_plugins/analytics/AIbox/utils/: log.cpp  log.h
metadata_sdk/samples/AI_box_plugin/src/test_ipc/: main.cpp
metadata_sdk/samples/AI_box_plugin/static-resources/dw_mx9/: manifest_dw_mx9.json  manifest_evision.json  manifest_nyx.json  manifest_provision.json
metadata_sdk/samples/sample_analytics_plugin/src/nx/vms_server_plugins/analytics/sample/: device_agent.cpp
metadata_sdk/samples/stub_analytics_plugin/src/nx/vms_server_plugins/analytics/stub/: main.cpp
metadata_sdk/src/: nx_sdk_version.inc
metadata_sdk/src/AIBox_plugin/: CMakeLists.txt
metadata_sdk/src/AIBox_plugin/src/nx/vms_server_plugins/analytics/AIBox/AIBox/: device_agent.cpp  device_agent.h  device_agent_manifest.h  engine.cpp  engine_manifest.cpp  plugin.cpp  plugin.h
metadata_sdk/src/AIBox_plugin/src/nx/vms_server_plugins/analytics/AIBox/net/: net_utils.cpp  net_utils.h  subscriber.cpp  subscriber.h  tcp_client.cpp  tcp_client.h
